added author name

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "query",
+            "name": "bakhtawar shah",
             "email": "cartlicms@gmail.com"
         }
     ],
